minecraft_mod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-mod
  namespace: minecraft-mod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-mod
      version: v1
  template:
    metadata:
      labels:
        app: minecraft-mod
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: memory
                operator: In
                values:
                - high
      serviceAccountName: minecraft-mod
      containers:
      - image: itzg/minecraft-server:java8-jdk
        name: minecraft-mod
        ports:
        - containerPort: 25565
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/data"
          name: world
      volumes:
      - name: world
        persistentVolumeClaim:
          claimName: minecraft-mod-pvc
