minecraft_mod/services.yml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-mod
  labels:
    app: minecraft-mod
    service: minecraft-mod
spec:
  ports:
  - name: minecraft-mod
    protocol: TCP
    port: 25565
    targetPort: 25565
  selector:
    app: minecraft-mod
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-mod-map
  labels:
    app: minecraft-mod
    service: minecraft-mod-map
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: minecraft-mod
