minecraft_mod/gateway-webmap.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minecraft-mod-map-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "minecraft-mod-map.tosukui.xyz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minecraft-mod-map
spec:
  hosts:
  - "minecraft-mod-map.tosukui.xyz"
  gateways:
  - minecraft-mod-map-gateway
  http:
  - route:
    - destination:
        host: minecraft-mod-map
        port:
          number: 8080
