minecraft_mod/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minecraft-mod-gateway
  namespace: minecraft-mod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 25567
      name: tcp
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 25567
      name: udp
      protocol: UDP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minecraft-mod
spec:
  hosts:
  - "*"
  gateways:
  - minecraft-mod-gateway
  tcp:
  - match:
    - port: 25567
    route:
    - destination:
        host: minecraft-mod
        port:
          number: 25565
